# weeks3_4/project/src/routes/shops.js
@@ -7,7 +7,7 @@ router.route("/:shopId/products").get(controller.getProducts);
 
 router.route("/:shopId/categories").get(controller.getCategories);
 
-router.route("/:id/products/:productId").get(controller.getProduct);
+router.route("/:shopId/products/:productId").get(controller.getProduct);
 
 module.exports = router;
 
